// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components /forms SelectField 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="makeStyles-dropdown-664"
    onClick={[Function]}
  >
    <div
      className="MuiInputBase-root makeStyles-root-665 makeStyles-root-667"
      onClick={[Function]}
      role="button"
    >
      <input
        autoComplete="off"
        className="MuiInputBase-input makeStyles-input-666"
        name="SELECT_FIELD_ATTR"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        type="text"
        value=""
      />
    </div>
    <img
      alt="Phone Menu"
      className="makeStyles-root-685 makeStyles-noShrink-686"
      height="5"
      src="selectChevron.svg"
      width="8"
    />
  </div>
</form>
`;

exports[`Storyshots Components Buttons 1`] = `
<div
  className="MuiBox-root MuiBox-root-2"
>
  <div
    className="MuiBox-root MuiBox-root-3"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Hower
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-24"
  >
    <button
      className="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-25"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Cancel
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-26"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Back
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-27"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Full Width
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-28"
  >
    <button
      aria-label="Export as CSV"
      className="MuiButtonBase-root MuiFab-root makeStyles-root-29 MuiFab-extended makeStyles-extended-30 MuiFab-secondary makeStyles-secondary-32 MuiFab-sizeSmall makeStyles-sizeSmall-31"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiFab-label"
      >
        <div
          className="MuiBox-root MuiBox-root-43"
        >
          <img
            alt="Download"
            className="makeStyles-root-44"
            height={16}
            src="download.svg"
            width={16}
          />
        </div>
        <div
          className="MuiBox-root MuiBox-root-49"
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary makeStyles-weight-52 makeStyles-weight-53"
          >
            Download
          </h6>
        </div>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components Hairline 1`] = `
Array [
  <div
    className="MuiBox-root MuiBox-root-95"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-98 makeStyles-weight-99"
    >
      Regular hairline without margin
    </p>
    <div
      className="MuiBox-root MuiBox-root-130"
    />
  </div>,
  <div
    className="MuiBox-root MuiBox-root-131"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-98 makeStyles-weight-132"
    >
      Regular hairline with unit 1 margin
    </p>
    <div
      className="MuiBox-root MuiBox-root-133"
    />
  </div>,
  <div
    className="MuiBox-root MuiBox-root-134"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-98 makeStyles-weight-135"
    >
      Regular hairline with unit 4 margin
    </p>
    <div
      className="MuiBox-root MuiBox-root-136"
    />
  </div>,
  <div
    className="MuiBox-root MuiBox-root-137"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-98 makeStyles-weight-138"
    >
      Hairline with custom color
    </p>
    <div
      className="MuiBox-root MuiBox-root-139"
    />
  </div>,
]
`;

exports[`Storyshots Components Images 1`] = `
<div
  className="MuiBox-root MuiBox-root-141"
>
  <div
    className="MuiBox-root MuiBox-root-142"
  >
    <img
      alt="Iov Logo"
      className="makeStyles-root-143"
      src="iov-logo.png"
    />
  </div>
  <div
    className="MuiBox-root MuiBox-root-148"
  >
    <div
      className="MuiBox-root MuiBox-root-149"
    >
      <img
        alt="Download"
        className="makeStyles-root-143"
        height={16}
        src="download.svg"
        width={16}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components Layout 1`] = `
<div
  className="MuiBox-root MuiBox-root-151"
>
  <div
    className="MuiBox-root MuiBox-root-152"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-155 makeStyles-weight-156 makeStyles-inline-153"
    >
      Title
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-155 makeStyles-weight-187 makeStyles-inline-153"
    >
       
      storybook
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-188"
  >
    <h6
      className="MuiTypography-root MuiTypography-h6 makeStyles-weight-155 makeStyles-weight-189"
    >
      Layout content
    </h6>
  </div>
  <div
    className="MuiBox-root MuiBox-root-190"
  />
  <div
    className="MuiBox-root MuiBox-root-191"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-192"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Components Switch 1`] = `
Array [
  <div
    className="MuiBox-root MuiBox-root-198"
  >
    <label
      className="MuiFormControlLabel-root"
    >
      <span
        className="MuiSwitch-root"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="MuiSwitch-icon"
            />
            <input
              className="MuiPrivateSwitchBase-input"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </span>
        <span
          className="MuiSwitch-bar"
        />
      </span>
      <span
        className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
      >
        With label
      </span>
    </label>
  </div>,
  <div
    className="MuiBox-root MuiBox-root-260"
  >
    <label
      className="MuiFormControlLabel-root"
    >
      <span
        className="MuiSwitch-root"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="MuiSwitch-icon"
            />
            <input
              className="MuiPrivateSwitchBase-input"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </span>
        <span
          className="MuiSwitch-bar"
        />
      </span>
      <span
        className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
      />
    </label>
  </div>,
]
`;

exports[`Storyshots Components Toasts 1`] = `
Array [
  <div
    className="MuiBox-root MuiBox-root-375"
  >
    <div
      className="MuiBox-root MuiBox-root-376"
    >
      <div
        className="MuiBox-root MuiBox-root-377"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Click to generate INFO toast
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-400 makeStyles-weight-401"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root MuiTypography-body2 MuiPaper-root MuiPaper-elevation6 MuiSnackbarContent-root makeStyles-info-434"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message"
        >
          <div
            className="MuiBox-root MuiBox-root-470 makeStyles-message-438"
          >
            <div
              className="makeStyles-iconBackground-439"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-471"
                height={24}
                src="success.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root MuiTypography-subtitle1 makeStyles-info-434 makeStyles-weight-400 makeStyles-weight-476"
            >
              Hi INFO this is a cool feature. Stay tuned
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <img
                alt="Close"
                className="makeStyles-root-471"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root MuiBox-root-486"
    >
      <div
        className="MuiBox-root MuiBox-root-487"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Click to generate WARN toast
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-400 makeStyles-weight-488"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root MuiTypography-body2 MuiPaper-root MuiPaper-elevation6 MuiSnackbarContent-root makeStyles-warning-435"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message"
        >
          <div
            className="MuiBox-root MuiBox-root-489 makeStyles-message-438"
          >
            <div
              className="makeStyles-iconBackground-439"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-471"
                height={24}
                src="warning.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root MuiTypography-subtitle1 makeStyles-warning-435 makeStyles-weight-400 makeStyles-weight-490"
            >
              Hi WARN
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <img
                alt="Close"
                className="makeStyles-root-471"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root MuiBox-root-491"
    >
      <div
        className="MuiBox-root MuiBox-root-492"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Click to generate ERROR toast
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-400 makeStyles-weight-493"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root MuiTypography-body2 MuiPaper-root MuiPaper-elevation6 MuiSnackbarContent-root makeStyles-error-433"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message"
        >
          <div
            className="MuiBox-root MuiBox-root-494 makeStyles-message-438"
          >
            <div
              className="makeStyles-iconBackground-439"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-471"
                height={24}
                src="error.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root MuiTypography-subtitle1 makeStyles-error-433 makeStyles-weight-400 makeStyles-weight-495"
            >
              Hi ERR
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <img
                alt="Close"
                className="makeStyles-root-471"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>,
  " ",
]
`;

exports[`Storyshots Components Tooltip 1`] = `
Array [
  <div
    className="MuiBox-root MuiBox-root-272"
  >
    <div
      className="makeStyles-container-274"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-277"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
  <div
    className="MuiBox-root MuiBox-root-282"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-285 makeStyles-weight-286 makeStyles-inline-283"
      style={
        Object {
          "marginRight": "4px",
        }
      }
    >
      Loooooooooooooooooooooooooooooooooong text
    </p>
    <div
      className="makeStyles-container-274"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-277"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Components Typography 1`] = `
Array [
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-319 makeStyles-weight-320"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root MuiTypography-h4 makeStyles-weight-319 makeStyles-weight-351"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-319 makeStyles-weight-352"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root MuiTypography-h5 makeStyles-weight-319 makeStyles-weight-353"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-319 makeStyles-weight-354"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-h6 makeStyles-weight-319 makeStyles-weight-355"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-319 makeStyles-weight-356"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root MuiTypography-body1 makeStyles-weight-319 makeStyles-weight-357"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-319 makeStyles-weight-358"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root MuiTypography-body2 makeStyles-weight-319 makeStyles-weight-359"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-319 makeStyles-weight-360"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 makeStyles-weight-319 makeStyles-weight-361"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-319 makeStyles-weight-362"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 makeStyles-weight-319 makeStyles-weight-363"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-319 makeStyles-weight-364"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary makeStyles-weight-319 makeStyles-weight-365 makeStyles-inline-317"
  >
    First part of the text. 
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 makeStyles-weight-319 makeStyles-weight-366 makeStyles-inline-317"
  >
    Second part of the text.
  </h6>,
]
`;

exports[`Storyshots Components/forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input MuiOutlinedInput-input"
        disabled={false}
        name="textFieldUniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-563"
  >
    <div
      className="makeStyles-dropdown-564"
      onClick={[Function]}
    >
      <div
        className="MuiInputBase-root makeStyles-root-565 makeStyles-root-567"
        onClick={[Function]}
        role="button"
      >
        <input
          autoComplete="off"
          className="MuiInputBase-input makeStyles-input-566"
          name="selectFieldUniqueIdentifier"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
      <img
        alt="Phone Menu"
        className="makeStyles-root-568 makeStyles-noShrink-569"
        height="5"
        src="selectChevron.svg"
        width="8"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components/forms TextFieldForm 1`] = `
<div
  className="MuiBox-root MuiBox-root-594"
>
  <div
    className="MuiBox-root MuiBox-root-595"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root Mui-error Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input MuiOutlinedInput-input"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root MuiFormHelperText-contained Mui-error"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-660"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input MuiOutlinedInput-input"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-661"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root Mui-disabled Mui-disabled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root Mui-disabled Mui-disabled MuiInputBase-formControl"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-disabled"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-662"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input MuiOutlinedInput-input"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-663"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend"
              style={
                Object {
                  "width": 0,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <textarea
            aria-invalid={false}
            className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            rows={5}
            value="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Routes/Account Show account status 1`] = `
<div
  className="MuiBox-root MuiBox-root-698"
  id="/account"
>
  <div
    className="MuiBox-root MuiBox-root-699"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-702 makeStyles-weight-703 makeStyles-inline-700"
    >
      Account
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-702 makeStyles-weight-734 makeStyles-inline-700"
    >
       
      Status
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-735"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root MuiBox-root-736"
      >
        <h6
          className="MuiTypography-root MuiTypography-subtitle2 makeStyles-weight-702 makeStyles-weight-737"
        >
          Available accounts
        </h6>
      </div>
      <div
        className="makeStyles-dropdown-738"
        onClick={[Function]}
      >
        <div
          className="MuiInputBase-root makeStyles-root-739 makeStyles-root-741"
          onClick={[Function]}
          role="button"
        >
          <input
            autoComplete="off"
            className="MuiInputBase-input makeStyles-input-740"
            name="SELECT_FIELD_ATTR"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="text"
            value=""
          />
        </div>
        <img
          alt="Phone Menu"
          className="makeStyles-root-759 makeStyles-noShrink-760"
          height="5"
          src="selectChevron.svg"
          width="8"
        />
      </div>
    </form>
    <div
      className="MuiBox-root MuiBox-root-764"
    />
    <div
      className="MuiBox-root MuiBox-root-765"
    >
      <nav
        className="MuiList-root MuiList-padding"
      >
        <div
          className="MuiBox-root MuiBox-root-770"
        >
          <li
            className="MuiListItem-root MuiListItem-default MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemText-root"
            >
              <p
                className="MuiTypography-root MuiTypography-body1 makeStyles-weight-702 makeStyles-weight-789"
              >
                Transations
              </p>
            </div>
          </li>
        </div>
        <div
          className="MuiBox-root MuiBox-root-790"
        />
        <div
          className="MuiBox-root MuiBox-root-794"
        />
        <li
          className="MuiListItem-root MuiListItem-default MuiListItem-gutters makeStyles-center-792"
          disabled={false}
        >
          <div
            className="MuiListItemIcon-root makeStyles-empty-791"
          >
            <img
              alt="No Transations"
              className="makeStyles-root-759"
              height="42"
              src="uptodate.svg"
            />
          </div>
          <div
            className="MuiListItemText-root makeStyles-text-793"
          >
            <span
              className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary"
            >
              No Transations
            </span>
          </div>
        </li>
      </nav>
    </div>
    <div
      className="MuiBox-root MuiBox-root-796"
    >
      <nav
        className="MuiList-root MuiList-padding"
      >
        <div
          className="MuiBox-root MuiBox-root-797"
        >
          <li
            className="MuiListItem-root MuiListItem-default MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemText-root"
            >
              <p
                className="MuiTypography-root MuiTypography-body1 makeStyles-weight-702 makeStyles-weight-798"
              >
                Pending Transactions
              </p>
            </div>
          </li>
        </div>
        <div
          className="MuiBox-root MuiBox-root-799"
        />
        <div
          className="MuiBox-root MuiBox-root-800"
        />
        <li
          className="MuiListItem-root MuiListItem-default MuiListItem-gutters makeStyles-center-792"
          disabled={false}
        >
          <div
            className="MuiListItemIcon-root makeStyles-empty-791"
          >
            <img
              alt="No Pending Transactions"
              className="makeStyles-root-759"
              height="42"
              src="uptodate.svg"
            />
          </div>
          <div
            className="MuiListItemText-root makeStyles-text-793"
          >
            <span
              className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary"
            >
              No Pending Transactions
            </span>
          </div>
        </li>
      </nav>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-801"
  />
  <div
    className="MuiBox-root MuiBox-root-802"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-759"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Login Login page 1`] = `
<div
  className="MuiBox-root MuiBox-root-811"
  id="/login"
>
  <div
    className="MuiBox-root MuiBox-root-812"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-815 makeStyles-weight-816 makeStyles-inline-813"
    >
      Log
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-815 makeStyles-weight-847 makeStyles-inline-813"
    >
       
      In
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-848"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root MuiBox-root-849"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputType"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-887"
      >
        <div
          className="MuiBox-root MuiBox-root-888"
        >
          <button
            className="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled MuiButton-fullWidth"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
    <div
      className="MuiBox-root MuiBox-root-909"
    >
      <div
        className="MuiBox-root MuiBox-root-910"
      >
        <a
          href="/restore-account"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary makeStyles-weight-815 makeStyles-weight-911 makeStyles-inline-813 makeStyles-link-814"
          >
            Restore account
          </h6>
        </a>
      </div>
      <div
        className="MuiBox-root MuiBox-root-912"
      >
        <a
          href="/welcome"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary makeStyles-weight-815 makeStyles-weight-913 makeStyles-inline-813 makeStyles-link-814"
          >
            More options
          </h6>
        </a>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-914"
  />
  <div
    className="MuiBox-root MuiBox-root-915"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-916"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Recovery phrase Main 1`] = `
<div
  className="MuiBox-root MuiBox-root-922"
  id="/recovery-phrase"
>
  <div
    className="MuiBox-root MuiBox-root-923"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-926 makeStyles-weight-927 makeStyles-inline-924"
    >
      Recovery
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-926 makeStyles-weight-958 makeStyles-inline-924"
    >
       
      phrase
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-959"
  >
    <div
      className="MuiBox-root MuiBox-root-960"
    >
      <h6
        className="MuiTypography-root MuiTypography-subtitle2 makeStyles-weight-926 makeStyles-weight-961"
      >
        Your Recovery Phrase are 12 random words that are set in a particular order that acts as a tool to recover or back up your wallet on any platform.
      </h6>
    </div>
    <div
      className="MuiBox-root MuiBox-root-962"
    >
      <button
        aria-label="Export as CSV"
        className="MuiButtonBase-root MuiFab-root makeStyles-root-963 MuiFab-extended makeStyles-extended-964 MuiFab-secondary makeStyles-secondary-966 MuiFab-sizeSmall makeStyles-sizeSmall-965"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiFab-label"
        >
          <div
            className="MuiBox-root MuiBox-root-980"
          >
            <img
              alt="Download"
              className="makeStyles-root-981"
              height={16}
              src="download.svg"
              width={16}
            />
          </div>
          <div
            className="MuiBox-root MuiBox-root-986"
          >
            <h6
              className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary makeStyles-weight-926 makeStyles-weight-987"
            >
              Export as .PDF
            </h6>
          </div>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      className="MuiBox-root MuiBox-root-988"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-926 makeStyles-weight-989 makeStyles-inline-924"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root MuiBox-root-990"
    >
      <div
        className="MuiBox-root MuiBox-root-991"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Back
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1009"
  />
  <div
    className="MuiBox-root MuiBox-root-1010"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-981"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Restore Account Restore 1`] = `
<div
  className="MuiBox-root MuiBox-root-1022"
  id="/restore-account"
>
  <div
    className="MuiBox-root MuiBox-root-1023"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1026 makeStyles-weight-1027 makeStyles-inline-1024"
    >
      Restore
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1026 makeStyles-weight-1058 makeStyles-inline-1024"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1059"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle1 makeStyles-weight-1026 makeStyles-weight-1060 makeStyles-inline-1024"
    >
      Restore your account with your recovery words. Enter your recovery words here.
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root MuiBox-root-1061"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <textarea
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
              disabled={false}
              name="recoveryPhraseField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Recovery phrase"
              required={false}
              rows={5}
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1099"
      >
        <div
          className="MuiBox-root MuiBox-root-1100"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              Back
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          className="MuiBox-root MuiBox-root-1121"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label"
            >
              Restore
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1122"
  />
  <div
    className="MuiBox-root MuiBox-root-1123"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1124"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup New account page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1140"
  id="/signup1"
>
  <div
    className="MuiBox-root MuiBox-root-1141"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1144 makeStyles-weight-1145 makeStyles-inline-1142"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1144 makeStyles-weight-1176 makeStyles-inline-1142"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1177"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root MuiBox-root-1178"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <label
            className="MuiFormLabel-root Mui-required Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
            data-shrink={true}
          >
            Account name
            <span
              className="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input"
              disabled={false}
              name="accountNameField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Account name"
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1235"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <label
            className="MuiFormLabel-root Mui-required Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
            data-shrink={true}
          >
            Password
            <span
              className="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputType"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1236"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <label
            className="MuiFormLabel-root Mui-required Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
            data-shrink={true}
          >
            Confirm Password
            <span
              className="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputType"
              disabled={false}
              name="passwordConfirmInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1237"
      >
        <div
          className="MuiBox-root MuiBox-root-1238"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              Back
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          className="MuiBox-root MuiBox-root-1259"
        >
          <button
            className="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled MuiButton-fullWidth"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1260"
  />
  <div
    className="MuiBox-root MuiBox-root-1261"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1262"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Recovery Phrase page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1278"
  id="/signup2"
>
  <div
    className="MuiBox-root MuiBox-root-1279"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1282 makeStyles-weight-1283 makeStyles-inline-1280"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1282 makeStyles-weight-1314 makeStyles-inline-1280"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1315"
  >
    <div
      className="MuiBox-root MuiBox-root-1316"
    >
      <div
        className="MuiBox-root MuiBox-root-1317"
      >
        <div
          className="MuiBox-root MuiBox-root-1318"
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 makeStyles-weight-1282 makeStyles-weight-1319 makeStyles-inline-1280"
          >
            Activate Recovery Phrase?
          </h6>
        </div>
        <div
          className="makeStyles-container-1321"
          onClick={[Function]}
        >
          <img
            alt="Info"
            className="makeStyles-root-1324"
            height={16}
            src="info_normal.svg"
            width={16}
          />
        </div>
      </div>
      <label
        className="MuiFormControlLabel-root"
      >
        <span
          className="MuiSwitch-root"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <span
                className="MuiSwitch-icon"
              />
              <input
                className="MuiPrivateSwitchBase-input"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </span>
          <span
            className="MuiSwitch-bar"
          />
        </span>
        <span
          className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
        />
      </label>
    </div>
    <div
      className="MuiBox-root MuiBox-root-1360"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-1282 makeStyles-weight-1361 makeStyles-inline-1280"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root MuiBox-root-1362"
    >
      <div
        className="MuiBox-root MuiBox-root-1363"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Back
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1381"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Continue
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1382"
  />
  <div
    className="MuiBox-root MuiBox-root-1383"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1324"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Security hint page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1395"
  id="/signup3"
>
  <div
    className="MuiBox-root MuiBox-root-1396"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1399 makeStyles-weight-1400 makeStyles-inline-1397"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1399 makeStyles-weight-1431 makeStyles-inline-1397"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1432"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle1 makeStyles-weight-1399 makeStyles-weight-1433 makeStyles-inline-1397"
    >
      To help you remember your details in the future please provide a security hint:
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root MuiBox-root-1434"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input"
              disabled={false}
              name="securityHintField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Security hint"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1472"
      >
        <div
          className="MuiBox-root MuiBox-root-1473"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              Back
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          className="MuiBox-root MuiBox-root-1494"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label"
            >
              Create
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1495"
  />
  <div
    className="MuiBox-root MuiBox-root-1496"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1497"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Welcome Welcome page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1513"
  id="/welcome"
>
  <div
    className="MuiBox-root MuiBox-root-1514"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1517 makeStyles-weight-1518 makeStyles-inline-1515"
    >
      Welcome
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1517 makeStyles-weight-1549 makeStyles-inline-1515"
    >
       
      to your IOV manager
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1550"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-1517 makeStyles-weight-1551 makeStyles-inline-1515"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root MuiBox-root-1552"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Log in
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <div
      className="MuiBox-root MuiBox-root-1573"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        New account
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <div
      className="MuiBox-root MuiBox-root-1574"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Import account
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1575"
  />
  <div
    className="MuiBox-root MuiBox-root-1576"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1577"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;
